@@ -1,10 +1,8 @@
 package org.cloudfoundry.multiapps.controller.process.steps;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
-import java.util.TreeSet;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -18,7 +16,7 @@ import org.cloudfoundry.multiapps.common.test.Tester.Expectation;
 import org.cloudfoundry.multiapps.common.util.JsonUtil;
 import org.cloudfoundry.multiapps.controller.api.model.ProcessType;
 import org.cloudfoundry.multiapps.controller.client.lib.domain.CloudApplicationExtended;
-import org.cloudfoundry.multiapps.controller.client.lib.domain.CloudServiceInstanceExtended;
+import org.cloudfoundry.multiapps.controller.client.lib.domain.ImmutableCloudApplicationExtended;
 import org.cloudfoundry.multiapps.controller.core.cf.v2.ApplicationCloudModelBuilder;
 import org.cloudfoundry.multiapps.controller.core.helpers.ModuleToDeployHelper;
 import org.cloudfoundry.multiapps.controller.core.model.DeployedMta;
@@ -51,49 +49,51 @@ class BuildCloudUndeployModelStepTest extends SyncFlowableStepTest<BuildCloudUnd
     public static Stream<Arguments> testExecute() {
         return Stream.of(
             // @formatter:off
-            // (0) No previously deployed MTA:
-            Arguments.of(new StepInput("modules-to-deploy-01.json", "apps-to-deploy-01.json", "empty-list.json", Collections.emptyList(), "deployed-apps-01.json", new TreeSet<>(List.of("a", "b", "c")), null, "empty-list.json", "empty-list.json", new TreeSet<>(List.of("a", "b", "c"))),
+            // (1) No previously deployed MTA:
+            Arguments.of(new StepInput(Collections.emptyList(), Collections.emptyList(), Set.of("a", "b", "c"), null, "empty-list.json", "empty-list.json", Set.of("a", "b", "c")),
                     new StepOutput(Collections.emptyList(), Collections.emptyList(), new Expectation(Expectation.Type.JSON, "empty-list.json"))),
-            // (1) There are obsolete modules:
-            Arguments.of(new StepInput("modules-to-deploy-01.json", "apps-to-deploy-01.json", "empty-list.json", Collections.emptyList(), "deployed-apps-04.json", new TreeSet<>(List.of("a", "b", "c", "d", "e")), "deployed-mta-03.json", "empty-list.json", "empty-list.json", new TreeSet<>(List.of("a", "b", "c", "d", "e"))),
+            // (2) There are obsolete modules:
+            Arguments.of(new StepInput(Collections.emptyList(), List.of("a", "b", "c", "d", "e"), Set.of("a", "b", "c"), "deployed-mta-03.json", "empty-list.json", "empty-list.json", Set.of("a", "b", "c", "d", "e")),
                     new StepOutput(List.of("d", "e"), Collections.emptyList(), new Expectation(Expectation.Type.JSON, "empty-list.json"))),
-            // (2) All modules are obsolete:
-            Arguments.of(new StepInput("modules-to-deploy-01.json", "apps-to-deploy-01.json", "empty-list.json", Collections.emptyList(), "deployed-apps-05.json", new TreeSet<>(List.of("a", "b", "c", "d", "e")), "deployed-mta-04.json", "empty-list.json", "empty-list.json", new TreeSet<>(List.of("a", "b", "c", "d", "e"))),
+            // (3) All modules are obsolete:
+            Arguments.of(new StepInput(Collections.emptyList(), List.of("d", "e"), Collections.emptySet(), "deployed-mta-04.json", "empty-list.json", "empty-list.json", Set.of("a", "b", "c", "d", "e")),
                     new StepOutput(List.of("d", "e"), Collections.emptyList(), new Expectation(Expectation.Type.JSON, "empty-list.json"))),
-            // (3) There are obsolete services:
-            Arguments.of(new StepInput("modules-to-deploy-01.json", "apps-to-deploy-01.json", "empty-list.json", List.of("s-1", "s-2"), "deployed-apps-04.json", new TreeSet<>(List.of("a", "b", "c", "d", "e")), "deployed-mta-05.json", "empty-list.json", "empty-list.json", new TreeSet<>(List.of("a", "b", "c", "d", "e"))),
-                    new StepOutput(List.of("d", "e"), List.of("s-3", "s-4"), new Expectation(Expectation.Type.JSON, "empty-list.json"))),
-            // (4) All services are obsolete:
-            Arguments.of(new StepInput("modules-to-deploy-01.json", "apps-to-deploy-01.json", "empty-list.json", List.of("s-3", "s-4"), "deployed-apps-05.json", new TreeSet<>(List.of("a", "b", "c", "d", "e")), "deployed-mta-06.json", "empty-list.json", "empty-list.json", new TreeSet<>(List.of("a", "b", "c", "d", "e"))),
-                    new StepOutput(List.of("d", "e"), List.of("s-1", "s-2"), new Expectation(Expectation.Type.JSON, "empty-list.json"))),
-            // (5) There are renamed applications:
-            Arguments.of(new StepInput("modules-to-deploy-01.json", "apps-to-deploy-01.json", "empty-list.json", Collections.emptyList(),"deployed-apps-06.json", new TreeSet<>(List.of("a", "b", "c")), "deployed-mta-07.json", "empty-list.json", "empty-list.json", new TreeSet<>(List.of("a", "b", "c"))),
+            // (4) There are obsolete services:
+            Arguments.of(new StepInput(List.of("s-1", "s-2"), List.of("a", "b", "c", "d", "e"), Set.of("a", "b", "c", "d", "e"), "deployed-mta-05.json", "empty-list.json", "empty-list.json", Set.of("a", "b", "c", "d", "e")),
+                    new StepOutput(Collections.emptyList(), List.of("s-3", "s-4"), new Expectation(Expectation.Type.JSON, "empty-list.json"))),
+            // (5) All services are obsolete:
+            Arguments.of(new StepInput(List.of("s-3", "s-4"), List.of("d", "e"), Set.of("a", "b", "c", "d", "e"), "deployed-mta-06.json", "empty-list.json", "empty-list.json", Set.of("a", "b", "c", "d", "e")),
+                    new StepOutput(Collections.emptyList(), List.of("s-1", "s-2"), new Expectation(Expectation.Type.JSON, "empty-list.json"))),
+            // (6) There are renamed applications:
+            Arguments.of(new StepInput(Collections.emptyList(),List.of("namespace.a", "namespace.b", "namespace.c"), Set.of("a", "b", "c"), "deployed-mta-07.json", "empty-list.json", "empty-list.json", Set.of("a", "b", "c")),
                     new StepOutput(List.of("namespace.a", "namespace.b", "namespace.c"), Collections.emptyList(), new Expectation(Expectation.Type.JSON, "empty-list.json"))),
-            // (6) There are no obsolete services:
-            Arguments.of(new StepInput("modules-to-deploy-01.json", "apps-to-deploy-01.json", "empty-list.json", List.of("s-1", "s-2", "s-3"), "deployed-apps-04.json", new TreeSet<>(List.of("a", "b", "c", "d", "e")), "deployed-mta-08.json", "empty-list.json", "empty-list.json", new TreeSet<>(List.of("a", "b", "c", "d", "e"))),
-                    new StepOutput(List.of("d", "e"), Collections.emptyList(), new Expectation(Expectation.Type.JSON, "empty-list.json"))),
-            // (7) There are no obsolete modules:
-            Arguments.of(new StepInput("modules-to-deploy-01.json", "apps-to-deploy-01.json", "empty-list.json", Collections.emptyList(), "deployed-apps-07.json", new TreeSet<>(List.of("a", "b", "c")), "deployed-mta-09.json", "empty-list.json", "empty-list.json", new TreeSet<>(List.of("a", "b", "c"))),
+            // (7) There are no obsolete services:
+            Arguments.of(new StepInput(List.of("s-1", "s-2", "s-3"), List.of("a", "b", "c", "d", "e"), Set.of("a", "b", "c", "d", "e"), "deployed-mta-08.json", "empty-list.json", "empty-list.json", Set.of("a", "b", "c", "d", "e")),
                     new StepOutput(Collections.emptyList(), Collections.emptyList(), new Expectation(Expectation.Type.JSON, "empty-list.json"))),
-            // (8) There are no obsolete published provided dependencies:
-            Arguments.of(new StepInput("modules-to-deploy-01.json", "apps-to-deploy-01.json", "empty-list.json", Collections.emptyList(),"deployed-apps-04.json", new TreeSet<>(List.of("a", "b", "c", "d", "e")), "deployed-mta-10.json", "empty-list.json", "empty-list.json", new TreeSet<>(List.of("a", "b", "c", "d", "e"))),
-                    new StepOutput(List.of("d", "e"), Collections.emptyList(), new Expectation(Expectation.Type.JSON, "empty-list.json"))),
-            // (9) There are no obsolete subscriptions:
-            Arguments.of(new StepInput("modules-to-deploy-01.json", "apps-to-deploy-01.json", "empty-list.json", Collections.emptyList(),"deployed-apps-04.json", new TreeSet<>(List.of("a", "b", "c", "d", "e")), "deployed-mta-03.json", "subscriptions-to-create-01.json","empty-list.json", new TreeSet<>(List.of("a", "b", "c", "d", "e"))),
-                    new StepOutput(List.of("d", "e"), Collections.emptyList(), new Expectation(Expectation.Type.JSON, "empty-list.json"))),
-            // (10) There are obsolete subscriptions:
-            Arguments.of(new StepInput("modules-to-deploy-01.json", "apps-to-deploy-01.json","empty-list.json", Collections.emptyList(),"deployed-apps-04.json", new TreeSet<>(List.of("a", "b", "c", "d", "e")), "deployed-mta-03.json", "subscriptions-to-create-01.json", "existing-subscriptions-01.json", new TreeSet<>(List.of("a", "b", "c", "d", "e"))),
-                    new StepOutput(List.of("d", "e"), Collections.emptyList(), new Expectation(Expectation.Type.JSON, "subscriptions-to-delete-01.json"))),
+            // (8) There are no obsolete modules:
+            Arguments.of(new StepInput(Collections.emptyList(), List.of("a", "b"), Set.of("a", "b", "c"), "deployed-mta-09.json", "empty-list.json", "empty-list.json", Set.of("a", "b", "c")),
+                    new StepOutput(Collections.emptyList(), Collections.emptyList(), new Expectation(Expectation.Type.JSON, "empty-list.json"))),
+            // (9) There are no obsolete published provided dependencies:
+            Arguments.of(new StepInput(Collections.emptyList(), List.of("a", "b", "c", "d", "e"), Set.of("a", "b", "c", "d", "e"), "deployed-mta-10.json", "empty-list.json", "empty-list.json", Set.of("a", "b", "c", "d", "e")),
+                    new StepOutput(Collections.emptyList(), Collections.emptyList(), new Expectation(Expectation.Type.JSON, "empty-list.json"))),
+            // (10) There are no obsolete subscriptions:
+            Arguments.of(new StepInput(Collections.emptyList(), List.of("a", "b", "c", "d", "e"), Set.of("a", "b", "c", "d", "e"), "deployed-mta-03.json", "subscriptions-to-create-01.json","empty-list.json", Set.of("a", "b", "c", "d", "e")),
+                    new StepOutput(Collections.emptyList(), Collections.emptyList(), new Expectation(Expectation.Type.JSON, "empty-list.json"))),
             // (11) There are obsolete subscriptions:
-            Arguments.of(new StepInput("modules-to-deploy-01.json", "apps-to-deploy-01.json", "empty-list.json", Collections.emptyList(),"deployed-apps-04.json", new TreeSet<>(List.of("a", "b", "c", "d", "e")), "deployed-mta-03.json", "empty-list.json",  "existing-subscriptions-01.json", new TreeSet<>(List.of("a", "b", "c", "d", "e"))),
-                    new StepOutput(List.of("d", "e"), Collections.emptyList(), new Expectation(Expectation.Type.JSON, "subscriptions-to-delete-02.json"))),
-            // (12) There are obsolete services because they are all unbound
-            Arguments.of(new StepInput("modules-to-deploy-01.json", "apps-to-deploy-01.json", "empty-list.json", Collections.emptyList(), "deployed-apps-04.json", new TreeSet<>(List.of("a", "b", "c", "d", "e")), "deployed-mta-08.json", "empty-list.json", "empty-list.json", new TreeSet<>(List.of("a", "b", "c", "d", "e"))),
-                    new StepOutput(List.of("d", "e"), List.of("s-1", "s-2", "s-3"), new Expectation(Expectation.Type.JSON, "empty-list.json"))),
-            // (13)
-            Arguments.of(new StepInput("modules-to-deploy-01.json", "apps-to-deploy-01.json", "services-to-create-02.json", Collections.emptyList(), "deployed-apps-04.json", new TreeSet<>(List.of("a", "b", "c", "d", "e")), "deployed-mta-08.json", "empty-list.json", "empty-list.json", new TreeSet<>(List.of("a", "b", "c", "d", "e"))),
-                    new StepOutput(List.of("d", "e"), List.of("s-1", "s-2", "s-3"), new Expectation(Expectation.Type.JSON, "empty-list.json")))
-// @formatter:on
+            Arguments.of(new StepInput(Collections.emptyList(), List.of("a", "b", "c", "d", "e"), Set.of("a", "b", "c", "d", "e"), "deployed-mta-03.json", "subscriptions-to-create-01.json", "existing-subscriptions-01.json", Set.of("a", "b", "c", "d", "e")),
+                    new StepOutput(Collections.emptyList(), Collections.emptyList(), new Expectation(Expectation.Type.JSON, "subscriptions-to-delete-01.json"))),
+            // (12) There are obsolete subscriptions:
+            Arguments.of(new StepInput(Collections.emptyList(), List.of("a", "b", "c", "d", "e"), Set.of("a", "b", "c", "d", "e"), "deployed-mta-03.json", "empty-list.json",  "existing-subscriptions-01.json", Set.of("a", "b", "c", "d", "e")),
+                    new StepOutput(Collections.emptyList(), Collections.emptyList(), new Expectation(Expectation.Type.JSON, "subscriptions-to-delete-02.json"))),
+            // (13) There are obsolete services because they are all unbound
+            Arguments.of(new StepInput(Collections.emptyList(), List.of("a", "b", "c", "d", "e"), Set.of("a", "b", "c", "d", "e"), "deployed-mta-08.json", "empty-list.json", "empty-list.json", Set.of("a", "b", "c", "d", "e")),
+                    new StepOutput(Collections.emptyList(), List.of("s-1", "s-2", "s-3"), new Expectation(Expectation.Type.JSON, "empty-list.json"))),
+            // (14) There are modules with skip-deploy parameter set
+            Arguments.of(
+                new StepInput(Collections.emptyList(), List.of("a", "b", "c"), Set.of("a", "c"), "deployed-mta-13.json", "empty-list.json", "empty-list.json", Set.of("a", "b", "c")),
+                new StepOutput(List.of("b"), Collections.emptyList(), new Expectation(Expectation.Type.JSON, "empty-list.json"))
+            )
+            // @formatter:on
         );
     }
 
@@ -112,11 +112,9 @@ class BuildCloudUndeployModelStepTest extends SyncFlowableStepTest<BuildCloudUnd
 
     protected List<Module> modulesToDeploy;
     private List<CloudApplicationExtended> deployedApps;
-    private List<CloudServiceInstanceExtended> servicesToCreate;
-    private List<CloudApplicationExtended> appsToDeploy;
+    private DeployedMta deployedMta;
     private List<ConfigurationSubscription> subscriptionsToCreate;
     private List<ConfigurationSubscription> existingSubscriptions;
-    private DeployedMta deployedMta;
     private DeploymentDescriptor deploymentDescriptor;
 
     private void prepareClient() {
@@ -132,35 +130,31 @@ class BuildCloudUndeployModelStepTest extends SyncFlowableStepTest<BuildCloudUnd
         List<Module> modules = input.deploymentDescriptorModules.stream()
                                                                 .map(this::getModuleFromName)
                                                                 .collect(Collectors.toList());
-        deploymentDescriptor = DeploymentDescriptor.createV2()
+        deploymentDescriptor = DeploymentDescriptor.createV3()
                                                    .setModules(modules)
-                                                   .setSchemaVersion("2")
+                                                   .setSchemaVersion("3")
                                                    .setId("id")
                                                    .setVersion("1");
     }
 
     private Module getModuleFromName(String moduleName) {
-        return Module.createV2()
+        return Module.createV3()
                      .setName(moduleName)
                      .setType("a");
     }
 
     private void loadParameters(StepInput input) {
-        String modulesToDeployString = TestUtil.getResourceAsString(input.modulesToDeployLocation, getClass());
-        String appsToDeployString = TestUtil.getResourceAsString(input.appsToDeployLocation, getClass());
-        String servicesToCreateString = TestUtil.getResourceAsString(input.servicesToCreateLocation, getClass());
-        String deployedAppsString = TestUtil.getResourceAsString(input.deployedAppsLocation, getClass());
         String subscriptionsToCreateString = TestUtil.getResourceAsString(input.subscriptionsToCreateLocation, getClass());
         String existingSubscriptionsString = TestUtil.getResourceAsString(input.existingSubscriptionsLocation, getClass());
 
-        modulesToDeploy = JsonUtil.fromJson(modulesToDeployString, new TypeReference<>() {
-        });
-        deployedApps = JsonUtil.fromJson(deployedAppsString, new TypeReference<>() {
-        });
-        servicesToCreate = JsonUtil.fromJson(servicesToCreateString, new TypeReference<>() {
-        });
-        appsToDeploy = JsonUtil.fromJson(appsToDeployString, new TypeReference<>() {
-        });
+        modulesToDeploy = input.mtaModules.stream()
+                                          .map(this::getModuleFromName)
+                                          .toList();
+        deployedApps = input.deployedAppNames.stream()
+                                             .map(deployedAppName -> ImmutableCloudApplicationExtended.builder()
+                                                                                                      .name(deployedAppName)
+                                                                                                      .build())
+                                             .collect(Collectors.toList());
 
         subscriptionsToCreate = JsonUtil.fromJson(subscriptionsToCreateString, new TypeReference<>() {
         });
@@ -172,6 +166,10 @@ class BuildCloudUndeployModelStepTest extends SyncFlowableStepTest<BuildCloudUnd
             deployedMta = JsonUtil.fromJson(deployedMtaString, DeployedMta.class);
         }
         when(moduleToDeployHelper.isApplication(any())).thenReturn(true);
+        when(moduleToDeployHelper.shouldSkipDeploy(any(Module.class))).thenAnswer(invocationModule -> {
+            Module module = (Module) invocationModule.getArgument(0);
+            return !input.mtaModules.contains(module.getName());
+        });
 
         when(applicationCloudModelBuilder.getAllApplicationServices(any())).thenReturn(input.services);
 
@@ -180,11 +178,8 @@ class BuildCloudUndeployModelStepTest extends SyncFlowableStepTest<BuildCloudUnd
     private void prepareContext(StepInput input) {
         context.setVariable(Variables.DEPLOYED_MTA, deployedMta);
         context.setVariable(Variables.MODULES_TO_DEPLOY, modulesToDeploy);
-        context.setVariable(Variables.SERVICES_TO_CREATE, servicesToCreate);
-        context.setVariable(Variables.ALL_MODULES_TO_DEPLOY, modulesToDeploy);
-        List<String> appNamesToDeploy = new ArrayList<>();
-        appsToDeploy.forEach(app -> appNamesToDeploy.add(app.getName()));
-        context.setVariable(Variables.APPS_TO_DEPLOY, appNamesToDeploy);
+        context.setVariable(Variables.APPS_TO_DEPLOY, input.mtaModules.stream()
+                                                                      .toList());
         context.setVariable(Variables.SUBSCRIPTIONS_TO_CREATE, subscriptionsToCreate);
         context.setVariable(Variables.SPACE_GUID, SPACE_ID);
         context.setVariable(Variables.MTA_MODULES, input.mtaModules);
@@ -194,9 +189,9 @@ class BuildCloudUndeployModelStepTest extends SyncFlowableStepTest<BuildCloudUnd
     private void prepareSubscriptionService() {
         when(configurationSubscriptionService.createQuery()).thenReturn(configurationSubscriptionQuery);
         if (deployedMta != null) {
-            ConfigurationSubscriptionQuery mock = new MockBuilder<>(configurationSubscriptionQuery).on(
-                                                                                                       query -> query.mtaId(deployedMta.getMetadata()
-                                                                                                                                       .getId()))
+            ConfigurationSubscriptionQuery mock = new MockBuilder<>(configurationSubscriptionQuery).on(query -> query.mtaId(
+                                                                                                       deployedMta.getMetadata()
+                                                                                                                  .getId()))
                                                                                                    .on(query -> query.spaceId(SPACE_ID))
                                                                                                    .build();
             when(mock.list()).thenReturn(filter(existingSubscriptions));
@@ -249,29 +244,22 @@ class BuildCloudUndeployModelStepTest extends SyncFlowableStepTest<BuildCloudUnd
 
     private static class StepInput {
 
-        public final String modulesToDeployLocation;
-        public final String appsToDeployLocation;
-        public final String servicesToCreateLocation;
         public final List<String> services;
-        public final String deployedAppsLocation;
+        public final List<String> deployedAppNames;
         public final Set<String> mtaModules;
-        public final String subscriptionsToCreateLocation;
         public final String deployedMtaLocation;
+        public final String subscriptionsToCreateLocation;
         public final String existingSubscriptionsLocation;
         public final Set<String> deploymentDescriptorModules;
 
-        public StepInput(String modulesToDeployLocation, String appsToDeployLocation, String servicesToCreateLocation,
-                         List<String> services, String deployedAppsLocation, Set<String> mtaModules, String deployedMtaLocation,
+        public StepInput(List<String> services, List<String> deployedAppNames, Set<String> mtaModules, String deployedMtaLocation,
                          String subscriptionsToCreateLocation, String existingSubscriptionsLocation,
                          Set<String> deploymentDescriptorModules) {
-            this.modulesToDeployLocation = modulesToDeployLocation;
-            this.appsToDeployLocation = appsToDeployLocation;
-            this.servicesToCreateLocation = servicesToCreateLocation;
             this.services = services;
-            this.deployedAppsLocation = deployedAppsLocation;
+            this.deployedAppNames = deployedAppNames;
             this.mtaModules = mtaModules;
-            this.subscriptionsToCreateLocation = subscriptionsToCreateLocation;
             this.deployedMtaLocation = deployedMtaLocation;
+            this.subscriptionsToCreateLocation = subscriptionsToCreateLocation;
             this.existingSubscriptionsLocation = existingSubscriptionsLocation;
             this.deploymentDescriptorModules = deploymentDescriptorModules;
         }
